# native_argon2

./: README.md  ffigen.yaml  pubspec.yaml
.github/workflows/: github-actions-build.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/native_argon2_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: native_argon2.podspec
ios/Classes/: native_argon2.c
lib/: native_argon2.dart  native_argon2_bindings_generated.dart
linux/: CMakeLists.txt
macos/: native_argon2.podspec
macos/Classes/: argon2.c  core.c  encoding.c  ref.c  thread.c
macos/Classes/blake2/: blake2b.c
src/: CMakeLists.txt  native_argon2.c
src/blake2/: blake2.h
test/: argon2_hash_encoded_test.dart  argon2_hash_raw_test.dart  argon2_test.dart
windows/: CMakeLists.txt
